# CareerMatch

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  job_data.go  progress.md  resume_data.go  业务流程.drawio  架构.drawio
backend/: .env.example  README.md  convert_job_seed.py  import_jobs_offline.py  prepare_job_json.py  pyproject.toml  run.py
backend/app/: __init__.py  bootstrap.py  job_enrichment.py  job_seed_loader.py
backend/app/api/routes/: __init__.py  filter_payloads.py  gap.py  health.py  jobs.py  matches.py  resumes.py
backend/app/clients/: __init__.py  document_parser.py  embedding.py  llm.py  object_storage.py  qdrant_store.py  vector_store.py
backend/app/core/: config.py  logging_utils.py
backend/app/domain/: __init__.py  models.py
backend/app/repositories/: __init__.py  in_memory.py  payload_codec.py  postgres.py  sqlite.py
backend/app/services/: __init__.py  gap_analysis.py  job_enrichment.py  job_pipeline.py  matching.py  resume_pipeline.py  skill_aliases.py
backend/data/: sample_jobs.json
backend/scripts/: import_jobs_offline.py  import_resumes_batch.py  rebuild_job_tags_postgres.py
backend/test/: local_test_config.py  matching_report_20260324_204617.json  matching_report_20260324_204617.md  report_manager.py  sample_resume.txt  test_job_normalization_compare.py  test_job_tag_enrichment.py  test_local_test_config_llm_connection.py  test_matching_filters.py  test_multi_resume_average_eval.py  test_ranking_correlation.py  test_resume_algorithm_llm_compare.py  test_resume_flow.py  test_uploaded_resume_matching.py
docs/: test.md  (+9 more)
(+23 files in other folders)
